# Jupyter

./: Desmos.ipynb  model_selector.py  pyproject.toml
.ipynb_checkpoints/: Desmos-checkpoint.ipynb
