[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
